// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. red article flag 1`] = `
<style>
.S1 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  margin-right: 0px;
  margin-bottom: 0px;
}

.S2 {
  margin-right: 0px;
  margin-bottom: 0px;
}

.IS1 {
  background-color: rgba(255,0,0,1.00);
  border-top-left-radius: 2.5px;
  border-top-right-radius: 2.5px;
  border-bottom-right-radius: 2.5px;
  border-bottom-left-radius: 2.5px;
  height: 5px;
  width: 5px;
}

.IS2 {
  color: rgba(255,0,0,1.00);
  font-family: TimesDigitalW04-RegularSC;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 1.4px;
  line-height: 12px;
  margin-left: 5px;
}

.IS3 {
  -webkit-align-items: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-align: center;
  -webkit-box-align: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}
</style>

<div
  className="IS3 S2"
>
  <div
    className="IS1 S1"
  />
  <div
    className="IS2 S2"
  >
    coloured red
  </div>
</div>
`;

exports[`2. multiple article flags 1`] = `
<style>
.S1 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  margin-right: 0px;
  margin-bottom: 0px;
}

.S2 {
  margin-right: 0px;
  margin-bottom: 0px;
}

.S3 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  margin-bottom: 0px;
}

.S4 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  margin-right: 0px;
}

.IS1 {
  background-color: rgba(60,129,190,1.00);
  border-top-left-radius: 2.5px;
  border-top-right-radius: 2.5px;
  border-bottom-right-radius: 2.5px;
  border-bottom-left-radius: 2.5px;
  height: 5px;
  width: 5px;
}

.IS2 {
  color: rgba(60,129,190,1.00);
  font-family: TimesDigitalW04-RegularSC;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 1.4px;
  line-height: 12px;
  margin-left: 5px;
}

.IS3 {
  -webkit-align-items: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-align: center;
  -webkit-box-align: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS4 {
  margin-right: 15px;
}

.IS5 {
  background-color: rgba(197,29,36,1.00);
  border-top-left-radius: 2.5px;
  border-top-right-radius: 2.5px;
  border-bottom-right-radius: 2.5px;
  border-bottom-left-radius: 2.5px;
  height: 5px;
  width: 5px;
}

.IS6 {
  color: rgba(197,29,36,1.00);
  font-family: TimesDigitalW04-RegularSC;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 1.4px;
  line-height: 12px;
  margin-left: 5px;
}

.IS7 {
  -webkit-align-items: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-align: center;
  -webkit-box-align: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS8 {
  margin-right: 15px;
}

.IS9 {
  background-color: rgba(227,70,5,1.00);
  border-top-left-radius: 2.5px;
  border-top-right-radius: 2.5px;
  border-bottom-right-radius: 2.5px;
  border-bottom-left-radius: 2.5px;
  height: 5px;
  width: 5px;
}

.IS10 {
  color: rgba(227,70,5,1.00);
  font-family: TimesDigitalW04-RegularSC;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 1.4px;
  line-height: 12px;
  margin-left: 5px;
}

.IS11 {
  -webkit-align-items: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-align: center;
  -webkit-box-align: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS12 {
  margin-right: 15px;
}

.IS13 {
  background-color: rgba(77,77,77,1.00);
  border-top-left-radius: 2.5px;
  border-top-right-radius: 2.5px;
  border-bottom-right-radius: 2.5px;
  border-bottom-left-radius: 2.5px;
  height: 5px;
  width: 5px;
}

.IS14 {
  color: rgba(77,77,77,1.00);
  font-family: TimesDigitalW04-RegularSC;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 1.4px;
  line-height: 12px;
  margin-left: 5px;
}

.IS15 {
  -webkit-align-items: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-align: center;
  -webkit-box-align: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS16 {
  margin-right: 15px;
}

.IS17 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-bottom: 10px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-box-lines: multiple;
}
</style>

<div
  className="IS17 S4"
>
  <div
    className="IS4 S3"
  >
    <div
      className="IS3 S2"
    >
      <div
        className="IS1 S1"
      />
      <div
        className="IS2 S2"
      >
        updated
      </div>
    </div>
  </div>
  <div
    className="IS8 S3"
  >
    <div
      className="IS7 S2"
    >
      <div
        className="IS5 S1"
      />
      <div
        className="IS6 S2"
      >
        exclusive
      </div>
    </div>
  </div>
  <div
    className="IS12 S3"
  >
    <div
      className="IS11 S2"
    >
      <div
        className="IS9 S1"
      />
      <div
        className="IS10 S2"
      >
        new
      </div>
    </div>
  </div>
  <div
    className="IS16 S3"
  >
    <div
      className="IS15 S2"
    >
      <div
        className="IS13 S1"
      />
      <div
        className="IS14 S2"
      >
        sponsored
      </div>
    </div>
  </div>
</div>
`;
